<resources>
    <string name="app_name">LinearLayoutSample</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="fraction">1/x</string>
    <string name="module">%</string>
    <string name="root">√</string>
    <string name="plusMinus">+/-</string>
    <string name="clear">C</string>
    <string name="clearAll">CE</string>
    <string name="left_arrow">←</string>
    <string name="MC">MC</string>
    <string name="MR">MR</string>
    <string name="MS">MS</string>
    <string name="Mplus">M+</string>
    <string name="Mminus">M-</string>
</resources>
