<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:weightSum="8">
    <TextView
        android:id="@+id/calculatorScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:gravity="center_vertical"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:layout_weight="2"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/MC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/MC"
            android:textSize="25sp" />

        <Button
            android:id="@+id/MR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/MR"
            android:textSize="25sp" />

        <Button
            android:id="@+id/MS"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/MS"
            android:textSize="25sp" />

        <Button
            android:id="@+id/mPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Mplus"
            android:textSize="25sp" />

        <Button
            android:id="@+id/mMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Mminus"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/clearEverything"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="deleteOnClick"
            android:text="@string/left_arrow"
            android:textSize="55sp" />

        <Button
            android:id="@+id/del5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="clearallOnClick"
            android:text="@string/clearAll"
            android:textSize="25sp" />

        <Button
            android:id="@+id/del"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="clearOnClick"
            android:text="@string/clear"
            android:textSize="25sp" />

        <Button
            android:id="@+id/del2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plusMinus"
            android:onClick="plusMinusOnClick"
            android:textSize="25sp" />

        <Button
            android:id="@+id/del4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="rootOnClick"
            android:text="@string/root"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">
        <Button
            android:id="@+id/n7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="sevenOnClick"
            android:text="@string/seven"
            android:textSize="25sp" />
        <Button
            android:id="@+id/n8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="eightOnClick"
            android:text="@string/eight"
            android:textSize="25sp" />
        <Button
            android:id="@+id/n9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="nineOnClick"
            android:text="@string/nine"
            android:textSize="25sp" />
        <Button
            android:id="@+id/division"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="divideOnClick"
            android:text="@string/divide"
            android:textSize="25sp" />
        <Button
            android:id="@+id/procent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/module"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">
        <Button
            android:id="@+id/n4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="fourOnClick"
            android:text="@string/four"
            android:textSize="25sp" />
        <Button
            android:id="@+id/n5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="fiveOnClick"
            android:text="@string/five"
            android:textSize="25sp" />
        <Button
            android:id="@+id/n6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="sixOnClick"
            android:text="@string/six"
            android:textSize="25sp" />
        <Button
            android:id="@+id/multiplication"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="multiplyOnClick"
            android:text="@string/multiply"
            android:textSize="25sp" />
        <Button
            android:id="@+id/fraction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fraction"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/n1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/one"
                        android:onClick="oneOnClick"

                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/n2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/two"
                        android:onClick="twoOnClick"

                        android:textSize="25sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="0">

                    <Button
                        android:id="@+id/n11"
                        android:layout_width="match_parent"
                        android:layout_height="178dp"
                        android:layout_weight="1"
                        android:text="@string/zero"
                        android:onClick="zeroOnClick"
                        android:textSize="25sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/n3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/three"
                        android:onClick="threeOnClick"

                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/ny"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/dot"
                        android:onClick="dotOnClick"

                        android:textSize="25sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/nxx"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="minusOnClick"
                        android:text="@string/minus"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/nyy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/plus"
                        android:onClick="plusOnClick"
                        android:textSize="25sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/nr"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:onClick="equalOnClick"
                        android:text="@string/equal"
                        android:textSize="25sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>